# nostril

./: .envrc  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  COPYING  GNUmakefile  Makefile  README.md  aes.c  aes.h  base64.c  base64.h  build.cmake.sh  clock_gettime.h  compiler.h  configurator.c  cursor.h  default.nix  endian.h  hex.h  hmac_sha256.h  make-secp256k1.sh  nip44.c  nostril-query  nostril.c  proof.h  random.h  sha256.c  sha256.h  shell.nix
.github/workflows/: c-cpp.yml  macos-matrix.yml  macos-pre-release.yml  macos-release.yml  ubuntu-matrix.yml  ubuntu-pre-release.yml  ubuntu-release.yml
devtools/: refresh-submodules.sh
doc/: INSTALL.txt  nostril.1
docker/: Dockerfile
ext/secp256k1/: CMakeLists.txt
nostril.xcodeproj/: project.pbxproj
nostril.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
nostril.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
nostril.xcodeproj/xcshareddata/xcschemes/: nostril.xcscheme
nostril.xcodeproj/xcuserdata/git.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: git-send-nostr  git-show-nostr  nostr-contact  nostr-post  nostr-query  nostr-relay-note  nostril-post  nostril-relay
